# make_usd_great_again

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  make_usd_great_again.code-workspace
media/: HelloWorld.usda
scr/: main.cpp
scr/01Attributes/: CMakeLists.txt
scr/01Prims/: CMakeLists.txt  Prims01  Prims01.cpp  test.py
src/01Prims/: Prims01.cpp
src/Viewer/: CMakeLists.txt  camera.h  main.cpp  scene.cpp  scene.h  sceneCamera.cpp  sceneCamera.h  viewer.cpp  viewer.h
src/Viewer/playground/: usdCamera.py
